[package]
authors = ["musitdev <philippe.delrieu@free.fr>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32F7XX microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f7x"
repository = "https://github.com/musitdev/stm32f7x"
version = "0.2.0"

[dependencies]
cortex-m = "0.3.1"
vcell = "0.1.0"
bare-metal = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.3.5"

[features]
rt = ["cortex-m-rt"]
