[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "musitdev <philippe.delrieu@free.fr>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F7xx family of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/musitdev/stm32f7x"
name = "stm32f7x"
version = "0.2.0"

[dependencies]
cortex-m = "0.4.0"
vcell = "0.1.0"
bare-metal = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.3.0"

[features]
rt = ["cortex-m-rt"]
